# HotelBookingPredictor

./:   README.md  .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yaml
notebooks/: data_preprocessing.ipynb  exploratory_data_analysis.ipynb  model_training.ipynb  model_training_evaluation.ipynb
plots/: guests_by_country.html
src/: data_preprocessing.py  feature_engineering.py  models.py  utils.py
tests/: test_feature_engineering.py  test_models.py  test_preprocessing.py  test_utils.py
