[tool.poetry]
name = "tui-cruises-challenge"
version = "0.1.0"
description = ""
authors = ["Anas Suffo <anassaffo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
ipykernel = "^6.25.1"
geopandas = "^0.13.2"
plotly = "^5.16.1"
nbformat = "^5.9.2"
pycountry = "^22.3.5"
python-pptx = "^0.6.22"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
