[tool.poetry]
name = "revinue_optimization_tool"
version = "0.1.0"
description = ""
authors = ["Anas Suffo <anassaffo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
ipykernel = "^6.25.1"
plotly = "^5.16.1"
nbformat = "^5.9.2"
scikit-learn = "^1.3.0"
tqdm = "^4.66.1"
statsmodels = "^0.14.0"
numpy = "^1.25.2"
seaborn = "^0.12.2"
xgboost = "^1.7.6"
tabulate = "^0.9.0"
pmdarima = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
