[tool.poetry]
name = "revinue_optimization_tool"
version = "0.1.0"
description = ""
authors = ["Anas Suffo <anassaffo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
matplotlib = "*"
ipykernel = "*"
plotly = "*"
nbformat = "*"
scikit-learn = "*"
tqdm = "*"
statsmodels = "*"
numpy = "*"
seaborn = "*"
xgboost = "*"
tabulate = "*"
pytest = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

